# dock-sight

./: .gitignore  DOCKER.md  Dockerfile  Makefile  README.md  config.json  install.sh
.github/workflows/: auto-tag.yml  docker-publish.yml  release.yml
backend/: Cargo.toml
backend/src/: db.rs  main.rs  openapi.rs  proxy.rs  registries.rs  routes.rs
backend/src/auth/: mod.rs  routes.rs
backend/src/docker/: cleanup.rs  containers.rs  deploy.rs  images.rs  logs.rs  mod.rs  network.rs  services.rs  volumes.rs
backend/src/helpers/: cpu.rs  disk.rs  mod.rs  network.rs  ram.rs
backend/src/routers/: default.rs  docker_service_detail.rs  docker_services.rs  mod.rs  sysinfo.rs  version.rs
backend/src/system/: routes.rs
backend/src/system/metrics/: disk.rs  mod.rs  network.rs
frontend/: .gitignore  README.md  astro.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json  vite.config.ts
frontend-old/: astro.config.mjs
frontend-old/src/components/: header-controls.tsx  logs-fullscreen.tsx  modal.tsx
frontend-old/src/components/auth/: password-strength.tsx
frontend-old/src/components/dashboard/: cleanup-tab.tsx  dashboard.tsx  metric-card.tsx
frontend-old/src/components/service/: images-tab.tsx  mini-service-chart.tsx  service-detail.tsx  service-metric-card.tsx
frontend-old/src/hooks/: use-auth.ts
frontend-old/src/pages/: index.astro
frontend/scripts/: sync-cargo-version.mjs
frontend/src/: App.tsx  index.css
frontend/src/components/: about-modal.tsx  header-controls.tsx  modal.tsx
frontend/src/components/auth/: AuthView.tsx  auth-view.tsx  big-password-input.tsx
frontend/src/components/dashboard/: CleanupTab.tsx  dashboard.tsx  (+11 more)
frontend/src/context/: DashboardContext.tsx  dashboard-context.tsx
frontend/src/hooks/: use-auth.ts  use-dashboard-data.ts  useAuth.ts
frontend/src/layouts/: Layout.astro
frontend/src/lib/: formatters.ts
frontend/src/pages/: index.astro  logs.astro  service.astro
frontend/src/services/: api.ts  auth.ts  docker.ts  proxy.ts  registries.ts  sysinfo.tsx
frontend/src/styles/: global.css
frontend/src/types/: dashboard.ts
(+104 files in other folders)
