[package]
name = "backend"
version = "0.2.5"
edition = "2024"

[toolchain]
channel = "stable"
components = ["rustfmt", "clippy"]

[dependencies]
axum = { version = "0.8.6", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
rust-embed = "8.4.0"
mime_guess = "2.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
utoipa = "5.4.0"
sysinfo = "0.38.0"
bollard = "0.20.0"
futures-util = "0.3.31"
